--- a/resources/assets/sass/includes/_general.sass
+++ b/resources/assets/sass/includes/_general.sass
@@ -78,6 +78,10 @@ textarea
   .img-wrap
     height: 100px !important
 
+    img
+      min-height: 0
+      min-width: 100%
+
   .featured-post-wrap
     bottom: 0 !important
     +display(flex)
